# fastapi-query-flatten

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
fastapi_query_flatten/: __init__.py  middleware.py
tests/: test_middleware.py
