[tool.poetry]
name = "fastapi-query-flatten"
version = "0.1.0"
description = ""
authors = ["David Lin <davidzylin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
fastapi = ">=0.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
